--- a/static/css/base_shop.css
+++ b/static/css/base_shop.css
@@ -6,22 +6,29 @@ body {
     font-family:helvetica, sans-serif; 
 }
 
+nav.navbar.shop{
+    background-color:transparent;
+    padding-top: 15px;
+    border-style: hidden;
+  
+}
+
 h1, h2, h3, h4, h5 , h6 { 
     font-family: 'Ubuntu', sans-serif; font-weight:normal;
 }
 
 a {
     text-decoration:none;
-    color:seagreen;
+    color:#31708f;
 }
 
 a:hover {
-    color:lime;
+    color:#31708f;
 }
 
 a.button, input[type="submit"] {
     color:#fff;
-    background:seagreen;
+    background:#4db6ac;
     border-radius:4px;
     padding:10px 20px;
     font-size:14px;
@@ -63,7 +70,7 @@ tbody tr.subtotal {
 }
 
 thead th, tbody tr.total {
-    background: seagreen;
+    background: #4db6ac;
     color:#fff;
     font-weight:bold;
 }
@@ -171,7 +178,7 @@ ul.errorlist {
 }
 
 #sidebar ul li.selected {
-    background:seagreen;
+    background:#4db6ac;
     border-radius:4px;
 }
 
