--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brande animated rollIn " href="#">Sport Center</a>
+					<a class="navbar-brande animated rollIn " href="#">Fitness Center</a>
 					</div>
 					<div id="navbar" class="navbar-collapse collapse navbar-right" aria-expanded="false" style="height: 1px;">
 					<ul class="nav navbar-nav">
