--- a/templates/shop_product/shop_product.html
+++ b/templates/shop_product/shop_product.html
@@ -1,41 +1,25 @@
-{% load static %}
-<!DOCTYPE html>
+{% extends 'base_sis.html' %}
+{%load static%}
+{%block sis%}
 
-
-<html lang="es">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>{% block title%} Products {%endblock%} </title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://fonts.googleapis.com/css?family=Sarpanch:400,800" rel="stylesheet">
-		<!--Import Google Icon Font-->
-		<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-		<!-- Bootstrap Core CSS -->
-		<link href="{%static 'css/bootstrap.min.css'%}" rel="stylesheet">
-        <link rel="stylesheet" href="{% static "css/base_shop.css"%}">
-        <link href="{%static 'css/base_sis.css'%}" rel="stylesheet">
-
-    </head>
-    <body>
-        {% include "base_sis.html"%} 
-        <div id="subheader" style="padding-top: 80px;">
-            <div class="cart">
+    <div style="padding-top: 50px;">
+        <nav class="navbar shop" role="navigation">
+            <div class="navbar-header col-lg-9">
             {% with total_items=cart|length %}
                 {% if cart|length > 0 %}
-                    Your cart: 
-                    <a href="{% url "cart:cart_detail" %}">
-                        {{ total_items }} item{{ total_items|pluralize }}, ${{ cart.get_total_price }}
+                    <a href="{% url "cart:cart_detail" %}" style="font-size: 25px;color:#4db6ac; ">
+                    <i class="fa fa-shopping-cart" aria-hidden="true" style="color:#4db6ac;"></i>
+                        : {{ total_items }} item{{ total_items|pluralize }}, ${{ cart.get_total_price }}
                     </a>
                 {% else %}
-                    Your cart is empty.
+                    <i class="fa fa-shopping-cart" aria-hidden="true" style="font-size: 25px; color:#4db6ac;">: 0</i>
                 {% endif %}
             {% endwith %}
             </div>
-        </div>
-        <div id="content">
-            {%block content%}
-            {%endblock%}
-        </div>
-    </body>
-</html>
+        </nav>
+        {%block content%}
+
+        {%endblock%}
+    </div>
+   
+{%endblock sis%}
