--- a/accounts/templates/registration/password_change_done.html
+++ b/accounts/templates/registration/password_change_done.html
@@ -6,12 +6,12 @@
 {% endblock titulo %}
 
 {% block sis %}
-	<div class="container">
+	<div class="container" style="padding: 50px;">
 		<div class="row">
-			<div class="col-md-8 col-md-offset-2 text-center">
-				<h2>Cambio de contraseña exitoso</h2>
+			<div class="col-md-9 col-md-offset-1 text-center">
+				<h2 class="user_detail">Cambio de contraseña exitoso</h2>
 				<p>
-					<h3>Tu contraseña se cambio satisfactoriamente</h3>
+					<h3 class="user_detail">Tu contraseña se cambio satisfactoriamente</h3>
 				</p>
 			</div>
 		</div>
