--- a/accounts/templates/registration/password_change_form.html
+++ b/accounts/templates/registration/password_change_form.html
@@ -9,11 +9,11 @@
 {% block sis %}
 	<div class="container">
 		<div class="row">
-			<div class="col-md-8 col-md-offset-2">
+			<div class=" col-md-10 col-sm-12 col-xs-12" style="padding: 50px;">
 				<div class="text-center">
-					<h2>Cambia tu contraseña</h2>
+					<h2 class="user_detail">Cambia tu contraseña</h2>
 					<p>
-						<h3>Usa el siguiente formulario para cambiar tu contraseña.</h3>
+						<h3 class="user_detail">Usa el siguiente formulario para cambiar tu contraseña.</h3>
 					</p>
 				</div>
 				<form action="." method="post">
