--- a/accounts/templates/registration/password_reset_done.html
+++ b/accounts/templates/registration/password_reset_done.html
@@ -6,7 +6,7 @@
 {% endblock titulo %}
 
 {% block content %}
-	<div class="container">
+	<div class="container" style="padding: 50px;">
 		<div class="row">
 			<div class="col-md-10 col-md-offset-1">
 				<h2 class="user_detail text-jusify">Restaurar tu contraseña</h2>
