--- a/accounts/templates/registration/password_reset_form.html
+++ b/accounts/templates/registration/password_reset_form.html
@@ -6,7 +6,7 @@
 {% endblock titulo %}
 
 {% block content %}
-	<div class="container">
+	<div class="container" style="padding: 50px;">
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2 text-center">
 				<h2 class="user_detail text-center"><i class="fa fa-key" aria-hidden="true"></i> ¿Olvidaste tu contraseña?</h2>
