--- a/templates/base_sis.html
+++ b/templates/base_sis.html
@@ -40,18 +40,20 @@
 					<div id="navbar" class="navbar-collapse collapse navbar-right" aria-expanded="false" style="height: 1px;">
 					<ul class="nav navbar-nav">
 						{%if request.user.is_authenticated%}
-						<li><a href="{% url "accounts:logout-then-login" %}">Cerrar  Sesión</a></li>
+						
 						<li class="btn-group" role="group">		
-						<button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="margin-top: 8px;">
+						<button type="button" class="btn btn-primary dropdown-toggle text-center" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="margin-top: 8px;">
 							Menu
 						<span class="caret"></span>
 						</button>
-						<ul class="dropdown-menu" style="background: #4db6ac;">
-							<li><a href="{% url 'accounts:list-client' %}">Clientes</a></li>
-							<li><a href="{%url 'shop_product:product_list'%}">Productos</a></li>
-							<li><a href="#">Visitas</a></li>
-							<li><a href="{%url 'courses:list'%}">Clases</a></li>
-							<li><a href="#">Reportes</a></li>
+						<ul class="dropdown-menu text-center" style="background: #4db6ac;">
+							<li><a href="{% url 'accounts:profile'%}" style="color: #fff;" class="text-center">Perfil Admin</a></li>
+							<li><a href="{% url 'accounts:list-client' %}"style="color: #fff;" class="text-center"><i class="fa fa-users"></i> Clientes</a></li>
+							<li><a href="{%url 'shop_product:product_list'%}"style="color: #fff;" class="text-center"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Productos</a></li>
+							<li><a href="#" style="color: #fff;" class="text-center"><i class="fa fa-male" aria-hidden="true"></i> Visitas</a></li>
+							<!--<li><a href="{%url 'courses:list'%}" style="color: #fff;" class="text-center">Clases</a></li>-->
+							<li><a href="#" style="color: #fff;" class="text-center"><i class="fa fa-pie-chart" aria-hidden="true"></i> Reportes</a></li>
+							<li><a href="{% url "accounts:logout-then-login" %}" style="color: #fff;" class="text-center"><i class="fa fa-times" aria-hidden="true"></i> Cerrar Sesión</a></li>
 						</ul>
 						</li>
 						
@@ -80,9 +82,10 @@
 					<li><a href="#"><i class="fa fa-male" aria-hidden="true"></i> Visitas</a></li>
 					<!--<li><a href="{%url 'courses:list'%}"><i class="fa fa-heart" aria-hidden="true"></i> Clases</a><li>-->
 					<li><a href="#"><i class="fa fa-pie-chart" aria-hidden="true"></i> Reportes</a></li>
+					<li><a href="{% url "accounts:logout-then-login" %}"><i class="fa fa-times" aria-hidden="true"></i> Cerrar Sesión</a></li>
 				</ul>			
 			</div>
-			<div  class="container col-lg-9 col-sm-9 col-offset col-md-10 col-md-offset-2">
+			<div  class="container col-lg-9 col-sm-9 col-offset col-md-9 col-md-offset-2">
 					{%block sis%}
 
 					{%endblock sis%}
