--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -26,7 +26,7 @@
 						<input type="submit" name="submit" value="Iniciar Sesión" class="btn btn-info">
 						</div>
 					</form>
-					<a href="{% url 'accounts:password_reset' %} "><h5 class="user_detail text-center">¿Olvidates tu contraseña?</h5></a>
+					<!--<a href="{% url 'accounts:password_reset' %} "><h5 class="user_detail text-center">¿Olvidates tu contraseña?</h5></a>-->
 			</div>
 		</div>
 	</div>
