--- a/accounts/templates/registration/list-client.html
+++ b/accounts/templates/registration/list-client.html
@@ -4,7 +4,7 @@
 {%block sis%}
 <div style="padding-top: 50px;">
 		{% if request.user.user_admin %}
-					<div class="text-center strong"><h1 class="user_detail">Lista de Clientes</h1></div>
+			<div class="col-md-12 col-lg-offset text-center strong"><h1 class="user_detail">Lista de Clientes</h1></div>
 		{% for client in clients %}
 			<div class="cardBox">
 				
@@ -19,14 +19,26 @@
 							<h3><a href="{% url 'accounts:detail-client' client.user_client_id %}">Cliente: {{client.user_client.first_name}} {{client.user_client.last_name}}</a></h3>
                             <p>Fecha inicio: {{client.start_date}}</p>
 							<p><i class="fa fa-map-marker" aria-hidden="true"> : {{client.address}}.</i></p>
-							<p><i class="fa fa-history" aria-hidden="true"> : {{client.age}} años</i></p>
-							<p><i class="fa fa-heart" aria-hidden="true">: {{client.blood_type}}</i></p>
+							<!--<p><i class="fa fa-history" aria-hidden="true"> : {{client.age}} años</i></p>
+							<p><i class="fa fa-heart" aria-hidden="true">: {{client.blood_type}}</i></p>-->
+							<h4 class="text-center status_client">Estatus:</h4>
+							<div class="col-md-12">
+											{% if client.status == "PA" %}
+												<div class="alert alert-success" role="alert">Pagado</div>
+											{% else %}
+												{% if client.status == "PE" %}
+													<div class="alert alert-warning" role="alert">Pendiente</div>
+												{% else %}
+													<div class="alert alert-danger" role="alert">Atrasado</div>
+												{% endif %}
+											{% endif %}
+							</div>
 							<a href="{% url 'monthlypayments:page-client' client.unique_id %}" class="btn btn-info" type="button">Cobrar</a>	
                           </div>
                 </div>
-				
             </div>
 		{% endfor %}
+
 		{% else %}
 
 			<div class="container">
@@ -40,6 +52,7 @@
 			</div>
 			
 		{% endif %}
+		{% include "registration/pagination.html" with page=clients %}
 	</div>
 
 {%endblock sis%}
