--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -5057,7 +5057,7 @@ a.thumbnail.active {
   color: inherit;
 }
 .alert-success {
-  color: #3c763d;
+  color: #4cae4c;
   background-color: #dff0d8;
   border-color: #d6e9c6;
 }
